--- a/.github/workflows/ubuntu-16.04-ros-kinetic.yml
+++ b/.github/workflows/ubuntu-16.04-ros-kinetic.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create Workspace
         run: |
-          source /opt/ros/$ROS_DISTRO/setup.bash
+          source /opt/ros/kinetic/setup.bash
           mkdir -p ~/catkin_ws/src
           cd ~/catkin_ws
           catkin init
