--- a/.github/workflows/ubuntu-16.04-ros-kinetic.yml
+++ b/.github/workflows/ubuntu-16.04-ros-kinetic.yml
@@ -43,4 +43,4 @@ jobs:
         run: |
           source ~/catkin_ws/devel/setup.bash
           cd ~/catkin_ws
-          catkin build
+          catkin build --no-status --summary
