--- a/.github/workflows/macos-11.0.yml
+++ b/.github/workflows/macos-11.0.yml
@@ -1,6 +1,10 @@
 name: macOS 11.0
 
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: master
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
