--- a/.github/workflows/ubuntu-18.04-ros-melodic.yml
+++ b/.github/workflows/ubuntu-18.04-ros-melodic.yml
@@ -20,8 +20,8 @@ jobs:
           sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu bionic main\" > /etc/apt/sources.list.d/ros-latest.list"
           sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
           sudo apt-get update -qq
-          sudo apt install libxml2-dev libraw1394-dev libncurses5-dev swig cmake-curses-gui libxml2-dev libjsoncpp-dev qtbase5-dev qtbase5-dev-tools qt5-qmake qt5-default libqt5xmlpatterns5-dev
-          sudo apt install ros-melodic-ros-base ros-melodic-tf2 ros-melodic-tf python-wstool python-catkin-tools
+          sudo apt install libxml2-dev libraw1394-dev libncurses5-dev swig cmake-curses-gui libxml2-dev libjsoncpp-dev qtbase5-dev qtbase5-dev-tools qt5-qmake qt5-default libqt5xmlpatterns5-dev libbluetooth-dev
+          sudo apt install ros-melodic-ros-base ros-melodic-tf2 ros-melodic-tf python-wstool python-catkin-tools 
 
       - name: Create Workspace
         run: |
@@ -29,7 +29,7 @@ jobs:
           mkdir -p ~/catkin_ws/src
           cd ~/catkin_ws
           catkin init
-          catkin config --cmake-args -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++
+          catkin config --cmake-args -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
           catkin build
 
       - name: Retrieve Code
