--- a/.github/workflows/ubuntu-20.04-ros-galactic.yml
+++ b/.github/workflows/ubuntu-20.04-ros-galactic.yml
@@ -24,7 +24,7 @@ jobs:
           sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
           sudo apt update
-          sudo apt install ros-galactic-ros-base
+          sudo apt install ros-galactic-ros-base ros-dev-tools
           sudo apt install python3-vcstool python3-colcon-common-extensions
           sudo apt install libxml2-dev libraw1394-dev libncurses5-dev qtcreator swig sox espeak cmake-curses-gui cmake-qt-gui git subversion gfortran libcppunit-dev libqt5xmlpatterns5-dev libbluetooth-dev
       - name: Create Workspace and retrieve code
@@ -35,5 +35,6 @@ jobs:
           vcs import --input https://raw.githubusercontent.com/jhu-dvrk/dvrk_robot_ros2/main/dvrk.vcs --recursive
       - name: Compile
         run: |
+          source /opt/ros/galactic/setup.bash
           cd ~/ros2_ws
           colcon build
