--- a/.github/workflows/ubuntu-18.04-ros-melodic.yml
+++ b/.github/workflows/ubuntu-18.04-ros-melodic.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
           sudo apt-get update -qq
           sudo apt install libxml2-dev libraw1394-dev libncurses5-dev swig cmake-curses-gui libxml2-dev libjsoncpp-dev qtbase5-dev qtbase5-dev-tools qt5-qmake qt5-default libqt5xmlpatterns5-dev libbluetooth-dev
-          sudo apt install ros-melodic-ros-base ros-melodic-tf2 ros-melodic-tf python-wstool python-catkin-tools 
+          sudo apt install ros-melodic-ros-base ros-melodic-tf2 ros-melodic-tf python-vcstool python-catkin-tools 
 
       - name: Create Workspace
         run: |
@@ -35,9 +35,7 @@ jobs:
       - name: Retrieve Code
         run: |
           cd ~/catkin_ws/src
-          wstool init
-          wstool merge https://raw.githubusercontent.com/jhu-dvrk/dvrk-ros/devel/dvrk_ros.rosinstall
-          wstool up
+          vcs import --input https://raw.githubusercontent.com/jhu-dvrk/dvrk-ros/devel/dvrk-devel.vcs --recursive
 
       - name: Compile
         run: |
