--- a/.github/workflows/ubuntu-20.04-ros-galactic.yml
+++ b/.github/workflows/ubuntu-20.04-ros-galactic.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Install ROS
         run: |
@@ -26,13 +26,15 @@ jobs:
           sudo apt update
           sudo apt install ros-galactic-ros-base ros-dev-tools
           sudo apt install python3-vcstool python3-colcon-common-extensions
-          sudo apt install libxml2-dev libraw1394-dev libncurses5-dev qtcreator swig sox espeak cmake-curses-gui cmake-qt-gui git subversion gfortran libcppunit-dev libqt5xmlpatterns5-dev libbluetooth-dev libhidapi-dev
+          sudo apt install libxml2-dev libraw1394-dev libncurses5-dev qtcreator swig sox espeak cmake-curses-gui cmake-qt-gui git subversion gfortran libcppunit-dev libqt5xmlpatterns5-dev libbluetooth-dev libhidapi-dev libjsoncpp-dev
+
       - name: Create Workspace and retrieve code
         run: |
           source /opt/ros/galactic/setup.bash
           mkdir -p ~/ros2_ws/src
           cd ~/ros2_ws/src
           vcs import --input https://raw.githubusercontent.com/jhu-dvrk/dvrk-github-workflow/main/vcs/ros2-dvrk-devel.vcs --recursive
+
       - name: Compile
         run: |
           source /opt/ros/galactic/setup.bash
