--- a/.github/workflows/ubuntu-24-04-ros-jazzy.yaml
+++ b/.github/workflows/ubuntu-24-04-ros-jazzy.yaml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     container:
-      image: ros:jazzy-ros-base
+      image: osrf/ros:jazzy-desktop
 
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
