--- a/.github/workflows/macos-latest.yaml
+++ b/.github/workflows/macos-latest.yaml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        brew install graphviz jsoncpp qt@5 pkg-config cppunit ccache
+        brew install graphviz jsoncpp qt@5 pkg-config cppunit ccache python3 numpy swig
         # Ensure homebrew bin is in path for subsequent steps
         echo "/opt/homebrew/bin" >> $GITHUB_PATH
 
