--- a/.github/workflows/windows-latest.yaml
+++ b/.github/workflows/windows-latest.yaml
@@ -37,6 +37,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-vcpkg-bin-
 
+    - name: Install vcpkg dependencies
+      run: |
+        vcpkg install --manifest-root=${{github.workspace}} --triplet x64-windows
+
     - name: Get all repositories
       run: |
         git clone https://github.com/jhu-cisst/cisst-saw --recursive ${{github.workspace}}/cisst-saw
